--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,11 @@
 layout: default
 ---
 <section id="about">
-  <header><h1><a href="/">Édouard Brière</a></h1></header>
-	<h2>{{ page.title }}</h2>
+  <header>
+    <h1><a href="/">Édouard Brière</a></h1>
+    <p><a href="/">← back to homepage</a></p>
+  </header>
+  <h2>{{ page.title }}</h2>
 	{% if page.date %}
 	<p class="date">{{ page.date | date_to_string }}</p>
 	{% endif %}
