Replace mdash by a middle point

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>
       {% if page.title %}
-        {{ page.title }} &mdash; Édouard Brière
+        {{ page.title }} · Édouard Brière
       {% else %}
         Personal Homepage for Édouard Brière
       {% endif %}
